# agent-db-safety

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  session.md
adapters/: __init__.py  mcp_server.py
benchmarks/: METRICS.md  RESULTS.md  __init__.py  ci_latency_gate.py  harness.py  loadgen.py  run_benchmark.py
docs/: DECISIONS.md  DESIGN.md
engine/: __init__.py  audit.py  classifier.py  intent.py  parser.py  policy.py  simulate.py  undo.py
examples/: demo_transcript.txt
paper/arxiv/: main.tex
policies/: default.yaml
research/: INDEX.md  PAPER.md  README.md  RESULTS_STUDY.md  __init__.py  agents.py  harness.py  label_audit.md  pre_registration.md  run_pilot.py  runner.py  stats.py
tests/: test_enforcement.py  test_pass_through.py  test_policy.py  test_simulate.py  test_undo.py
website/: index.html  script.js  styles.css
