[project]
name = "agent-db-safety"
version = "0.0.0"
description = "Runtime safety layer between AI agents and a database: deterministic policy, blast-radius simulation, and instant undo."
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies. Kept deliberately minimal -- everything here can end up
# near the request path, so we add deps consciously (CLAUDE.md sec. 4, sec. 7).
dependencies = [
    # Real Postgres parser (libpg_query binding). Never regex/string matching
    # for classification -- always the AST (CLAUDE.md sec. 6).
    "pglast>=6,<8",
    # Fast async Postgres driver. Async/no-blocking-I/O on the engine path.
    "asyncpg>=0.29,<0.31",
    "mcp>=1.28.0",
    "pyyaml>=6.0.3",
    "anthropic>=0.111.0",
    # UI-only: the Human Mode terminal interface. NEVER imported by engine/ and
    # never on the request path -- purely for rendering the interactive TUI.
    "rich>=13,<15",
]

# `pip install agent-db-safety` exposes the launcher; running it opens the TUI
# landing screen (choose: agent writes SQL, or I write SQL).
[project.scripts]
agentdb = "adapters.tui:main"
# The MCP server an agent (Claude Code / Codex) launches over stdio. A console
# script so the config command works after `pip install`, from any directory.
agentdb-mcp = "adapters.mcp_server:main"

[dependency-groups]
bench = [
    "hdrhistogram>=0.10.7",
]
# Dev-only tooling. Not installed in a production/runtime image.
dev = [
    "hdrhistogram>=0.10.7",
    "pytest>=8,<9",
    # The engine is async end-to-end; async tests need this from Day 1.
    "pytest-asyncio>=0.23,<0.25",
    "ruff>=0.5,<1.0",
    "black>=24,<26",
    "sqlalchemy>=2.0.51",
    "pandas>=3.0.3",
    "statsmodels>=0.14.6",
    "matplotlib>=3.11.0",
    "tabulate>=0.10.0",
]

# ---------------------------------------------------------------------------
# Tooling config
# ---------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Sensible default set: pyflakes (F), pycodestyle (E/W), isort (I),
# pyupgrade (UP), flake8-bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "adapters"]

# Ship the example policies inside the wheel so a pip-installed `agentdb` finds
# its default policy (adapters/tui.py resolves ../policies/default.yaml). Lands
# at the wheel root next to engine/ and adapters/.
[tool.hatch.build.targets.wheel.force-include]
"policies" = "policies"
