[project]
name = "interdict-db"
version = "0.1.0"
description = "Runtime safety layer for AI agents touching Postgres."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Prisha Rai", email = "pr482@cornell.edu" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Security",
]

# Runtime dependencies. Kept deliberately minimal -- everything here can end up
# near the request path, so we add deps consciously (CLAUDE.md sec. 4, sec. 7).
dependencies = [
    # Real Postgres parser (libpg_query binding). Never regex/string matching
    # for classification -- always the AST (CLAUDE.md sec. 6).
    "pglast>=6,<8",
    # Fast async Postgres driver. Async/no-blocking-I/O on the engine path.
    "asyncpg>=0.29,<0.31",
    "mcp>=1.28.0",
    "pyyaml>=6.0.3",
    "anthropic>=0.111.0",
    # UI-only: the optional local terminal interface. NEVER imported by engine/ and
    # never on the request path -- purely for rendering the interactive TUI.
    "rich>=13,<15",
]

[project.scripts]
# The MCP server an agent (Claude Code / Codex) launches over stdio.
interdict = "adapters.mcp_server:main"
interdict-demo = "examples.demo:cli_main"
interdict-tui = "adapters.tui:main"
interdict-stats = "adapters.tui:stats_main"

[project.urls]
Homepage = "https://interdict.vercel.app"
Repository = "https://github.com/prisharai/Interdict"
Issues = "https://github.com/prisharai/Interdict/issues"

[dependency-groups]
bench = [
    "hdrhistogram>=0.10.7",
]
# Dev-only tooling. Not installed in a production/runtime image.
dev = [
    "hdrhistogram>=0.10.7",
    "pytest>=8,<9",
    # The engine is async end-to-end; async tests need this from Day 1.
    "pytest-asyncio>=0.23,<0.25",
    "ruff>=0.5,<1.0",
    "black>=24,<26",
    "sqlalchemy>=2.0.51",
    # Research-only: cross-provider agent backend for the study harness. Never
    # imported by engine/ or adapters/ -- only research/agents.py:OpenAIAgent.
    "openai>=1.40",
    "pandas>=3.0.3",
    "statsmodels>=0.14.6",
    "matplotlib>=3.11.0",
    "tabulate>=0.10.0",
]

# ---------------------------------------------------------------------------
# Tooling config
# ---------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Sensible default set: pyflakes (F), pycodestyle (E/W), isort (I),
# pyupgrade (UP), flake8-bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "adapters", "examples"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/engine",
    "/adapters",
    "/examples",
    "/policies",
]

# Ship the example policies inside the wheel so a pip-installed command finds
# its default policy (adapters/tui.py resolves ../policies/default.yaml). Lands
# at the wheel root next to engine/ and adapters/.
[tool.hatch.build.targets.wheel.force-include]
"policies" = "policies"
